# pyaskalono

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
datasets/: spdx-json  spdx-text
src/: lib.rs
tests/: test_license_predicted.py
