[tool.poetry]
name = "pyaskalono"
version = "0.1.0"
description = "Python bindings for askalono library"
authors = ["Maxim Vasilev <Maxim.Vasilev@jetbrains.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
maturin = "^0.9.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
